# transport

./: .clang-format  .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  FindNet.cmake  FindTransport.cmake  LICENSE  README.md  generate.bat  vcpkg.json
.github/workflows/: ci.yml  cmake-multi-platform.yml
cmake/: FindChromiumBase.cmake  FindPromiseHpp.cmake
net/: CMakeLists.txt  acceptor.h  any_transport.h  asio_tcp_transport.cpp  asio_tcp_transport.h  asio_transport.h  auto_reset.h  awaitable.h  bind_util.h  bytemsg.h  compiler_specific.h  connector.h  deferred_transport.cpp  deferred_transport.h  deferred_transport_unittest.cpp  delegating_transport.h  dummy_transport.h  error_or.h  executor.h  inprocess_transport.cpp  inprocess_transport.h  inprocess_transport_factory.h  intercepting_transport.h  intercepting_transport_factory.h  log_source.h  logger.h  message_code.h  message_reader.h  message_reader_transport.cpp  message_reader_transport.h  message_reader_transport_unittest.cpp  message_receiver.h  message_transport.cpp  message_transport.h  message_transport_unittest.cpp  message_utils.h  net_exception.h  opened_transport.h  pipe_transport.cpp  pipe_transport.h  (+53 more)
net/base/: address_list.cc  compiler_specific.h  ip_address.cc  ip_address_unittest.cc  ip_endpoint.cc  net_errors.cc  net_errors.h  net_errors_posix.cc  net_errors_win.cc
net/base/threading/: thread_checker.h  thread_collision_warner.h
net/session/: bytebuf.h  session.cpp  session.h  session_info.cpp  session_info.h
net/socket/: socket_posix.cc  stream_socket.h  tcp_client_socket.cc  tcp_client_socket.h  tcp_server_socket.cc  tcp_socket_posix.cc  tcp_socket_posix.h  tcp_socket_win.cc  tcp_socket_win.h
net/test/: coroutine_util.h  debug_logger.h  immediate_executor.h  test_message_reader.h
transport/: CMakeLists.txt  any_transport.cpp  any_transport.h  asio_transport.h  auto_reset.h  awaitable.h  bind_util.h  bytemsg.h  cancelation.h  compiler_specific.h  deferred_transport.cpp  deferred_transport.h  deferred_transport_unittest.cpp  delegating_transport.h  dummy_transport.h  error.h  error_or.h  executor.h  expected.h  inprocess_transport.cpp  inprocess_transport.h  inprocess_transport_factory.h  intercepting_transport.h  intercepting_transport_factory.h  log.h  log_source.h  logger.h  message_reader.h  message_reader_transport.cpp  message_reader_transport.h  message_reader_transport_unittest.cpp  message_receiver.h  message_utils.h  pipe_transport.cpp  pipe_transport.h  queue_transport.cpp  queue_transport.h  serial_transport.cpp  serial_transport.h  tcp_transport.cpp  (+28 more)
transport/detail/: wrapped_transport.h
transport/session/: bytebuf.h  message_code.h  session.cpp  session.h  session_info.cpp  session_info.h  session_message_reader.h  session_unittest.cpp
transport/test/: coroutine_util.h  debug_logger.h  immediate_executor.h  test_log.h  test_message_reader.h
